--- a/index.html
+++ b/index.html
@@ -81,11 +81,68 @@
     // ------------------------------
     // 1) Produits de DÉMO à la main
     // ------------------------------
-    const PRODUCTS = [
-      { id:"k303-wht", name:"Polo K303 Blanc", price:8.9,  quality:86, stock:1200, leadTimeDays:2,  labels:["OEKO-TEX"],   keywords:"polo blanc coton" },
-      { id:"ns401-nvy", name:"Sweat NS401 Marine", price:14.5, quality:90, stock:320,  leadTimeDays:5,  labels:["GRS"],        keywords:"sweat marine recyclé" },
-      { id:"kb350-bio", name:"T-shirt KB350 Bio", price:7.2,  quality:80, stock:2200, leadTimeDays:3,  labels:["GOTS"],       keywords:"tee shirt bio blanc" }
-    ];
+  const PRODUCTS = [
+  {
+    id: "kb300-bio",
+    name: "Polo Kariban Bio KB300",
+    price: 9.8,
+    quality: 90,
+    stock: 950,
+    leadTimeDays: 3,
+    labels: ["GOTS", "OEKO-TEX"],
+    keywords: "polo bio coton organique blanc col classique",
+  },
+  {
+    id: "ns720-relax",
+    name: "Sweat Native Spirit Relax NS720",
+    price: 21.5,
+    quality: 95,
+    stock: 480,
+    leadTimeDays: 5,
+    labels: ["GRS", "VEGAN"],
+    keywords: "sweat coton recyclé oversize lifestyle marine",
+  },
+  {
+    id: "ku110-cap",
+    name: "Casquette K-up Sport KU110",
+    price: 5.4,
+    quality: 80,
+    stock: 2100,
+    leadTimeDays: 2,
+    labels: ["RCS 100"],
+    keywords: "casquette sport polyester respirant noir running",
+  },
+  {
+    id: "pro901-tee",
+    name: "T-shirt Proact Performance PRO901",
+    price: 6.9,
+    quality: 88,
+    stock: 1750,
+    leadTimeDays: 4,
+    labels: ["OEKO-TEX"],
+    keywords: "t shirt technique sport respirant blanc running",
+  },
+  {
+    id: "kb510-lin",
+    name: "Chemise Lin Premium KB510",
+    price: 29.9,
+    quality: 92,
+    stock: 310,
+    leadTimeDays: 7,
+    labels: ["OEKO-TEX"],
+    keywords: "chemise lin homme été beige naturel",
+  },
+  {
+    id: "ns240-tote",
+    name: "Tote Bag Native Spirit NS240",
+    price: 3.8,
+    quality: 85,
+    stock: 3200,
+    leadTimeDays: 2,
+    labels: ["OCS BLENDED"],
+    keywords: "sac coton recyclé cabas eco totebag",
+  }
+];
 
     // ------------------------------
     // 2) Utilitaires score & format
