--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="fr">
 <head>
@@ -30,13 +29,14 @@
     .score.ok{color:var(--ok)} .score.mid{color:var(--warn)} .score.bad{color:var(--bad)}
     .hint{font-size:12px;color:var(--muted)}
     footer{padding:32px 20px;color:var(--muted);text-align:center}
+    .badge{display:inline-block;font-size:11px;border:1px solid #e5e7eb;border-radius:999px;padding:2px 8px;margin-right:6px;color:#334155;background:#f9fafb}
   </style>
 </head>
 <body>
   <header>
     <div class="wrap">
       <h1>Smart Comparator – Démo statique</h1>
-      <p class="lead">Comparer 2–3 produits test (qualité / prix / disponibilité) et voir le meilleur choix en un coup d’œil.</p>
+      <p class="lead">Comparer des T-shirts, sweats et polos (qualité / prix / dispo / délais) pour trouver la meilleure option.</p>
     </div>
   </header>
 
@@ -53,12 +53,39 @@
             <input id="deadline" type="date" />
           </div>
         </div>
+        <div class="grid" style="grid-template-columns:1fr 1fr;gap:12px">
+          <div>
+            <label for="color">Couleur souhaitée</label>
+            <select id="color">
+              <option value="">Toutes</option>
+              <option>Blanc</option>
+              <option>Noir</option>
+              <option>Marine</option>
+              <option>Bleu</option>
+              <option>Gris chiné</option>
+              <option>Beige</option>
+            </select>
+          </div>
+          <div>
+            <label for="size">Taille</label>
+            <select id="size">
+              <option value="">Toutes</option>
+              <option>XS</option>
+              <option>S</option>
+              <option>M</option>
+              <option>L</option>
+              <option>XL</option>
+              <option>XXL</option>
+            </select>
+          </div>
+        </div>
         <div>
-          <label for="query">Mot-clé (ex. polo blanc, bio…)</label>
-          <input id="query" type="text" placeholder="ex. polo blanc" />
+          <label for="query">Mot-clé (ex. “polo bio”, “sport”, “oversize”)</label>
+          <input id="query" type="text" placeholder="ex. polo blanc, sport, bio..." />
         </div>
         <div class="hint">Astuce : laisse vide pour comparer tous les produits de test.</div>
       </div>
+
       <div class="grid" style="align-content:end">
         <button id="search" class="btn">Comparer maintenant</button>
         <div class="panel" style="background:#f9fafb">
@@ -68,9 +95,14 @@
             <input id="wPrice"   type="number" min="0" max="100" value="35" title="Prix %" />
             <input id="wAvail"   type="number" min="0" max="100" value="25" title="Disponibilité %" />
           </div>
-          <div class="hint">La somme doit faire 100. Plus tard : on verrouille automatiquement.</div>
+          <div class="hint">La somme doit faire 100. (Pour la démo, on normalise automatiquement.)</div>
         </div>
       </div>
+    </section>
+
+    <section class="panel" aria-label="Filtres actifs">
+      <span class="badge" id="badge-count">3 meilleurs résultats</span>
+      <span class="badge" id="badge-info">Score = Qualité 40% • Prix 35% • Dispo 25%</span>
     </section>
 
     <section class="cards" id="results" aria-live="polite"></section>
@@ -80,25 +112,51 @@
 
   <script>
     // ------------------------------
-    // 1) Produits de DÉMO à la main
+    // 1) Produits de DÉMO (9 items)
     // ------------------------------
-const PRODUCTS = [
-  // --- T-shirts ---
-  { id:"ns310-bio", name:"T-shirt Native Spirit Bio NS310", price:6.9, quality:88, stock:2100, leadTimeDays:3, labels:["GOTS","OEKO-TEX"], keywords:"t shirt coton bio unisexe blanc" },
-  { id:"kb305-heavy", name:"T-shirt Kariban Heavy KB305", price:5.8, quality:85, stock:1400, leadTimeDays:2, labels:["OEKO-TEX"], keywords:"t shirt épais coton 190g homme noir" },
-  { id:"pro200-tech", name:"T-shirt Proact Tech PRO200", price:7.5, quality:90, stock:800, leadTimeDays:4, labels:["OEKO-TEX"], keywords:"t shirt sport respirant polyester bleu" },
+    const PRODUCTS = [
+      // --- T-shirts ---
+      { id:"ns310-bio", name:"T-shirt Native Spirit Bio NS310", category:"tshirt",
+        price:6.9, quality:88, stock:2100, leadTimeDays:3,
+        labels:["GOTS","OEKO-TEX"], colors:["Blanc","Noir","Marine"], sizes:["XS","S","M","L","XL","XXL"],
+        keywords:"t shirt coton bio unisexe blanc durable" },
+      { id:"kb305-heavy", name:"T-shirt Kariban Heavy KB305", category:"tshirt",
+        price:5.8, quality:85, stock:1400, leadTimeDays:2,
+        labels:["OEKO-TEX"], colors:["Noir","Blanc","Bleu"], sizes:["S","M","L","XL","XXL"],
+        keywords:"t shirt épais coton 190g homme noir robuste" },
+      { id:"pro200-tech", name:"T-shirt Proact Tech PRO200", category:"tshirt",
+        price:7.5, quality:90, stock:800, leadTimeDays:4,
+        labels:["OEKO-TEX"], colors:["Bleu","Noir","Gris chiné"], sizes:["S","M","L","XL"],
+        keywords:"t shirt sport respirant polyester bleu running training" },
 
-  // --- Sweats ---
-  { id:"ns720-relax", name:"Sweat Native Spirit Relax NS720", price:21.5, quality:95, stock:450, leadTimeDays:5, labels:["GRS","VEGAN"], keywords:"sweat oversize coton recyclé marine" },
-  { id:"kb420-classic", name:"Sweat Kariban Classic KB420", price:18.9, quality:90, stock:950, leadTimeDays:3, labels:["OEKO-TEX"], keywords:"sweat unisexe col rond coton molleton" },
-  { id:"pro500-zip", name:"Sweat Proact Zip PRO500", price:23.4, quality:92, stock:370, leadTimeDays:6, labels:["OEKO-TEX"], keywords:"sweat technique sport zippé gris chiné" },
+      // --- Sweats ---
+      { id:"ns720-relax", name:"Sweat Native Spirit Relax NS720", category:"sweat",
+        price:21.5, quality:95, stock:450, leadTimeDays:5,
+        labels:["GRS","VEGAN"], colors:["Marine","Noir","Gris chiné"], sizes:["S","M","L","XL","XXL"],
+        keywords:"sweat oversize coton recyclé marine lifestyle" },
+      { id:"kb420-classic", name:"Sweat Kariban Classic KB420", category:"sweat",
+        price:18.9, quality:90, stock:950, leadTimeDays:3,
+        labels:["OEKO-TEX"], colors:["Noir","Gris chiné","Bleu"], sizes:["S","M","L","XL","XXL"],
+        keywords:"sweat unisexe col rond coton molleton classique" },
+      { id:"pro500-zip", name:"Sweat Proact Zip PRO500", category:"sweat",
+        price:23.4, quality:92, stock:370, leadTimeDays:6,
+        labels:["OEKO-TEX"], colors:["Gris chiné","Noir","Bleu"], sizes:["S","M","L","XL"],
+        keywords:"sweat technique sport zippé gris chiné performance" },
 
-  // --- Polos ---
-  { id:"kb300-bio", name:"Polo Kariban Bio KB300", price:9.8, quality:90, stock:1100, leadTimeDays:3, labels:["GOTS","OEKO-TEX"], keywords:"polo bio coton organique blanc" },
-  { id:"kb400-premium", name:"Polo Kariban Premium KB400", price:12.4, quality:93, stock:680, leadTimeDays:5, labels:["OEKO-TEX"], keywords:"polo homme piqué double fil bleu" },
-  { id:"pro701-active", name:"Polo Proact Active PRO701", price:10.9, quality:88, stock:1500, leadTimeDays:4, labels:["OEKO-TEX"], keywords:"polo sport respirant polyester noir" }
-];
-
+      // --- Polos ---
+      { id:"kb300-bio", name:"Polo Kariban Bio KB300", category:"polo",
+        price:9.8, quality:90, stock:1100, leadTimeDays:3,
+        labels:["GOTS","OEKO-TEX"], colors:["Blanc","Marine","Noir"], sizes:["S","M","L","XL","XXL"],
+        keywords:"polo bio coton organique blanc no label personnalisation" },
+      { id:"kb400-premium", name:"Polo Kariban Premium KB400", category:"polo",
+        price:12.4, quality:93, stock:680, leadTimeDays:5,
+        labels:["OEKO-TEX"], colors:["Bleu","Noir","Blanc"], sizes:["S","M","L","XL","XXL"],
+        keywords:"polo homme piqué double fil bleu premium" },
+      { id:"pro701-active", name:"Polo Proact Active PRO701", category:"polo",
+        price:10.9, quality:88, stock:1500, leadTimeDays:4,
+        labels:["OEKO-TEX"], colors:["Noir","Bleu","Blanc"], sizes:["S","M","L","XL"],
+        keywords:"polo sport respirant polyester noir club équipe" }
+    ];
 
     // ------------------------------
     // 2) Utilitaires score & format
@@ -107,16 +165,16 @@ const PRODUCTS = [
     function daysUntil(dateStr){
       if(!dateStr) return Infinity;
       const d = new Date(dateStr);
-      const now = new Date();
-      const diff = Math.ceil((d - now)/(1000*60*60*24));
+      const today = new Date(); today.setHours(0,0,0,0);
+      const diff = Math.ceil((d - today)/(1000*60*60*24));
       return diff < 0 ? -1 : diff;
     }
     function formatEUR(n){ return n.toLocaleString("fr-FR",{style:"currency",currency:"EUR"}); }
     function scoreProduct(p, weights){
-      // Normalisations simples pour la démo (à ajuster selon vraie data)
-      const priceNorm = clamp01(1 - p.price / 25);            // 0€ -> 1 ; 25€ -> 0
-      const qualityNorm = clamp01(p.quality / 100);           // 0-100 -> 0-1
-      const availNorm = clamp01(p.stock / 1000) * clamp01(1 - p.leadTimeDays/14); // stock élevé + délai court
+      // Normalisations simples pour la démo
+      const priceNorm = clamp01(1 - p.price / 30);              // 0€ -> 1 ; 30€ -> 0
+      const qualityNorm = clamp01(p.quality / 100);             // 0-100 -> 0-1
+      const availNorm = clamp01(p.stock / 1200) * clamp01(1 - (p.leadTimeDays / 14)); // stock élevé + délai court
       const s = qualityNorm*weights.quality + priceNorm*weights.price + availNorm*weights.availability;
       return Math.round(s * 100);
     }
@@ -125,15 +183,17 @@ const PRODUCTS = [
     // ------------------------------
     // 3) Filtrage & tri
     // ------------------------------
-    function compute(query, qty, deadline, weights){
+    function compute(query, qty, deadline, weights, color, size){
       const days = daysUntil(deadline);
+      const q = (query||"").trim().toLowerCase();
       return PRODUCTS
         .filter(p=>{
-          const q = (query||"").trim().toLowerCase();
-          const matches = !q || p.name.toLowerCase().includes(q) || p.keywords.includes(q);
+          const matchesQuery = !q || p.name.toLowerCase().includes(q) || p.keywords.toLowerCase().includes(q);
           const enoughStock = qty ? p.stock >= qty : true;
           const meetDeadline = (days === Infinity) ? true : (p.leadTimeDays <= days && days >= 0);
-          return matches && enoughStock && meetDeadline;
+          const matchColor = !color || (p.colors && p.colors.includes(color));
+          const matchSize = !size || (p.sizes && p.sizes.includes(size));
+          return matchesQuery && enoughStock && meetDeadline && matchColor && matchSize;
         })
         .map(p=>({ ...p, score: scoreProduct(p, weights) }))
         .sort((a,b)=> b.score - a.score)
@@ -144,26 +204,40 @@ const PRODUCTS = [
     // 4) Rendu UI
     // ------------------------------
     const elResults = document.getElementById("results");
-    function render(list){
+    const elBadgeCount = document.getElementById("badge-count");
+    const elBadgeInfo  = document.getElementById("badge-info");
+
+    function render(list, weights){
       elResults.innerHTML = "";
+      elBadgeCount.textContent = list.length ? `${list.length} meilleurs résultats` : "Aucun résultat";
+      elBadgeInfo.textContent = `Score = Qualité ${(weights.quality*100)|0}% • Prix ${(weights.price*100)|0}% • Dispo ${(weights.availability*100)|0}%`;
+
       if(!list.length){
-        elResults.innerHTML = `<div class="panel">Aucun résultat avec ces critères. Essaie d'élargir la recherche.</div>`;
+        elResults.innerHTML = `<div class="panel">Aucun résultat avec ces critères. Essaie d'élargir la recherche (couleur/taille, délai ou quantité).</div>`;
         return;
       }
+
       list.forEach(p=>{
         const lbls = p.labels.map(l=>`<span class="pill">${l}</span>`).join("");
+        const colors = p.colors.map(c=>`<span class="badge">${c}</span>`).join("");
+        const sizes  = p.sizes.map(s=>`<span class="badge">${s}</span>`).join("");
         elResults.insertAdjacentHTML("beforeend", `
           <article class="card" aria-label="${p.name}">
             <div class="title">${p.name}</div>
-            <div class="meta">ID: ${p.id}</div>
+            <div class="meta">ID: ${p.id} · Catégorie: ${p.category}</div>
+
             <div class="grid" style="grid-template-columns:1fr 1fr;gap:8px">
               <div><label>Prix</label><div><strong>${formatEUR(p.price)}</strong> / pièce</div></div>
               <div><label>Stock</label><div><strong>${p.stock}</strong> dispo</div></div>
               <div><label>Délai estimé</label><div><strong>${p.leadTimeDays} j</strong></div></div>
               <div><label>Qualité (démo)</label><div><strong>${p.quality}/100</strong></div></div>
             </div>
+
             <div><label>Labels</label><div>${lbls || "<span class='meta'>—</span>"}</div></div>
+            <div><label>Couleurs</label><div>${colors}</div></div>
+            <div><label>Tailles</label><div>${sizes}</div></div>
             <div><label>Score</label><div class="score ${scoreClass(p.score)}">${p.score}/100</div></div>
+
             <button class="btn" onclick="alert('Démo: génération de devis à venir')">Générer mon devis</button>
           </article>
         `);
@@ -178,17 +252,31 @@ const PRODUCTS = [
       const q = parseFloat($("wQuality").value||0)/100;
       const p = parseFloat($("wPrice").value||0)/100;
       const a = parseFloat($("wAvail").value||0)/100;
-      const sum = q+p+a || 1;
+      const sum = (q+p+a) || 1;
       return { quality: q/sum, price: p/sum, availability: a/sum };
     }
     function run(){
-      const list = compute($("query").value, parseInt($("qty").value||0,10), $("deadline").value, getWeights());
-      render(list);
+      const list = compute(
+        $("query").value,
+        parseInt($("qty").value || 0, 10),
+        $("deadline").value,
+        getWeights(),
+        $("color").value,
+        $("size").value
+      );
+      render(list, getWeights());
     }
-    $("search").addEventListener("click", run);
+
     // Init : deadline à +7 jours pour la démo
     const d = new Date(); d.setDate(d.getDate()+7); $("deadline").value = d.toISOString().slice(0,10);
     run();
+    $("search").addEventListener("click", run);
+
+    // Recalculer à la volée quand l'utilisateur change les pondérations ou filtres
+    ["wQuality","wPrice","wAvail","color","size","qty","deadline","query"].forEach(id=>{
+      $(id).addEventListener("change", run);
+      $(id).addEventListener("keyup", e => { if(id==="query") run(); });
+    });
   </script>
 </body>
 </html>
